[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Settings.gd" type="Script" id=1]
[ext_resource path="res://Transition/Transition.tscn" type="PackedScene" id=2]
[ext_resource path="res://nulshock bd.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 3 )

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="Transition" parent="." instance=ExtResource( 2 )]

[node name="EasyMode" type="Button" parent="Transition"]
margin_left = 27.0
margin_top = 167.0
margin_right = 280.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 1 )
text = "no challenge please"

[node name="RegularMode" type="Button" parent="Transition"]
margin_left = 25.9474
margin_top = 299.065
margin_right = 278.947
margin_bottom = 342.065
custom_fonts/font = SubResource( 1 )
text = "difficult but fair"

[node name="HardMode" type="Button" parent="Transition"]
margin_left = 25.0508
margin_top = 433.799
margin_right = 278.051
margin_bottom = 476.799
custom_fonts/font = SubResource( 1 )
text = "punish me"

[node name="Label" type="Label" parent="Transition"]
margin_left = 106.0
margin_top = 34.0
margin_right = 496.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "choose a difficulty"

[node name="Label2" type="Label" parent="Transition"]
margin_left = 303.278
margin_top = 168.636
margin_right = 585.278
margin_bottom = 241.636
custom_fonts/font = SubResource( 3 )
text = "Not recommended:
    - impossible to lose.
    - unlimited mistakes allowed.
    - very generous time limits."

[node name="Label3" type="Label" parent="Transition"]
margin_left = 304.25
margin_top = 301.081
margin_right = 596.25
margin_bottom = 370.081
custom_fonts/font = SubResource( 4 )
text = "medium challenge:
    - mistakes can be made
	    - fair time limits"

[node name="Label4" type="Label" parent="Transition"]
margin_left = 304.952
margin_top = 435.642
margin_right = 596.952
margin_bottom = 504.642
custom_fonts/font = SubResource( 4 )
text = "i seek a challenge:
    - no mistakes allowed
	    - difficult time limits"
[connection signal="pressed" from="Transition/EasyMode" to="." method="_on_EasyMode_pressed"]
[connection signal="pressed" from="Transition/RegularMode" to="." method="_on_RegularMode_pressed"]
[connection signal="pressed" from="Transition/HardMode" to="." method="_on_HardMode_pressed"]
